2011-07-09  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c' :
   remove unused global artifact `dynLlen'

2011-07-09  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/winmain.c :
   cleanup integer type conversions

2011-07-09  Robert Larice
 * src/ngsconvert.c ,
 * src/frontend/inp.c ,
 * src/frontend/nutinp.c ,
 * src/frontend/outitf.c ,
 * src/frontend/help/readhelp.c :
   cleanup fseek() usage

2011-07-08  Holger Vogt
 * display.c: replace error message by appropriate warning, if compiled
   as console application under MS Windows

2011-07-04  Holger Vogt
 * input.c: add ssize_t as SSIZE_T for MS Visual Studio

2011-07-03  Holger Vogt
 * main.c: remove reference to 'oflag'
 * ngspice.h: NaN definition for MS VS

2011-07-03  Robert Larice
 * man/man1/ngnutmeg.1 ,
 * man/man1/ngspice.1 :
   spelling fixes from debian `ngspice_23-1.debian.tar.gz', thank you !

2011-07-03  Robert Larice
 * configure.ac :
   enable -Wconversion
     remove -Wimplicit-function-declaration since its implicit in -Wall
     Note: -Wuninitialized is implicit in -Wall but may not be effective for -O0

2011-07-03  Robert Larice
 * src/Makefile.am ,
 * src/makeidx.c :
   upgrade ngmakeidx to support build in a sparate directory

2011-07-02  Robert Larice
 * src/main.c :
   main.c, a series of cleanups concerning SETJMP processing
    two issues surfaced in the original code:
      - nutmeg called with no file, propably should default to rawspice.raw
	still so, but now plain visable. shall we fix ?
      - there was a possiblility of endless recursion when
	  a failure happened during init processing

2011-07-02  Robert Larice
 * src/main.c :
   main.c, a series of cleanups

2011-07-02 Dietmar Warning
 * /devices/bsim4v4, /devices/bsim4v5, /devices/bsim4v6: bsim4vXnoi.c correct
   the multiplier entry for channel thermal noise

2011-07-02  Robert Larice
 * src/main.c :
   remove redundant variable `has_smk'
