@@ -1,4 +1,8 @@
 2011-07-09  Robert Larice
+ * src/frontend/com_fft.c :
+   possibly inexact long -> double cast
+
+2011-07-09  Robert Larice
  * src/frontend/inpcom.c ,
  * src/frontend/numparam/spicenum.c ,
  * src/frontend/numparam/xpressn.c' :
